--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,20 +1,34 @@
-# Use lightweight Python image
-FROM python:3.10-slim
+# ---------- Stage 1: Builder ----------
+FROM python:3.10-slim AS builder
 
-# Set working directory
 WORKDIR /app
 
-# Copy requirements first (Docker cache best practice)
-COPY requirements.txt .
+RUN apt-get update && apt-get install -y gcc libpq-dev
 
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt .
+RUN pip install --prefix=/install -r requirements.txt
+
+# ---------- Stage 2: Runtime ----------
+FROM python:3.10-slim
+
+# Create non-root user
+RUN useradd -m appuser
+
+WORKDIR /app
+
+# Copy only installed dependencies (not build tools)
+COPY --from=builder /install /usr/local
 
 # Copy application code
 COPY app.py .
 
-# Expose Flask port
+# Environment variables (best practice)
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+# Switch to non-root user
+USER appuser
+
 EXPOSE 5000
 
-# Run the app
 CMD ["python", "app.py"]
