--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -34,6 +34,9 @@ pipeline {
         }
 
         stage('Trivy Scan - Backend') {
+            options {
+                timeout(time: 10, unit: 'MINUTES')
+            }
             steps {
                 bat '''
                 docker run --rm ^
@@ -47,6 +50,9 @@ pipeline {
         }
 
         stage('Trivy Scan - Frontend') {
+            options {
+                timeout(time: 10, unit: 'MINUTES')
+            }
             steps {
                 bat '''
                 docker run --rm ^
