--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -3,6 +3,7 @@ FROM python:3.10-slim AS builder
 
 WORKDIR /app
 
+# Install build dependencies
 RUN apt-get update && apt-get install -y gcc libpq-dev
 
 COPY requirements.txt .
@@ -10,6 +11,9 @@ RUN pip install --prefix=/install -r requirements.txt
 
 # ---------- Stage 2: Runtime ----------
 FROM python:3.10-slim
+
+# Install runtime tools (curl needed for health check)
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user
 RUN useradd -m appuser
