--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,26 +1,36 @@
-# ---------- Stage 1: Builder ----------
+
+# Stage 1: Builder
+
 FROM python:3.10-slim AS builder
 
 WORKDIR /app
 
-# Install build dependencies
-RUN apt-get update && apt-get install -y gcc libpq-dev
+# Install build dependencies (only here)
+RUN apt-get update \
+    && apt-get install -y gcc libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
-RUN pip install --prefix=/install -r requirements.txt
 
-# ---------- Stage 2: Runtime ----------
+# Install Python dependencies into a temporary location
+RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
+
+
+
+# Stage 2: Runtime
 FROM python:3.10-slim
 
-# Install runtime tools (curl needed for health check)
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+# Install runtime utilities (curl needed for health checks)
+RUN apt-get update \
+    && apt-get install -y curl \
+    && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user
 RUN useradd -m appuser
 
 WORKDIR /app
 
-# Copy only installed dependencies (not build tools)
+# Copy installed Python packages from builder
 COPY --from=builder /install /usr/local
 
 # Copy application code
