--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,46 +1,47 @@
-
+# =========================
 # Stage 1: Builder
-
+# =========================
 FROM python:3.10-slim AS builder
+
+ENV DEBIAN_FRONTEND=noninteractive
 
 WORKDIR /app
 
-# Install build dependencies (only here)
+# Build dependencies ONLY
 RUN apt-get update \
     && apt-get install -y gcc libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
-
-# Install Python dependencies into a temporary location
 RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
 
 
-
+# =========================
 # Stage 2: Runtime
+# =========================
 FROM python:3.10-slim
 
-# Install runtime utilities (curl needed for health checks)
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Runtime utilities ONLY
 RUN apt-get update \
     && apt-get install -y curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Create non-root user
+# Non-root user
 RUN useradd -m appuser
 
 WORKDIR /app
 
-# Copy installed Python packages from builder
+# Copy dependencies from builder
 COPY --from=builder /install /usr/local
 
 # Copy application code
 COPY app.py .
 
-# Environment variables (best practice)
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-# Switch to non-root user
 USER appuser
 
 EXPOSE 5000
