--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,48 +1,23 @@
-# =========================
-# Stage 1: Builder
-# =========================
-FROM python:3.10-slim AS builder
-
-ENV DEBIAN_FRONTEND=noninteractive
-
-WORKDIR /app
-
-# Build dependencies ONLY
-RUN apt-get update \
-    && apt-get install -y gcc libpq-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-COPY requirements.txt .
-RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
-
-
-# =========================
-# Stage 2: Runtime
-# =========================
 FROM python:3.10-slim
 
-ENV DEBIAN_FRONTEND=noninteractive
-
-# Runtime utilities ONLY
-RUN apt-get update \
-    && apt-get install -y curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Non-root user
-RUN useradd -m appuser
-
 WORKDIR /app
 
-# Copy dependencies from builder
-COPY --from=builder /install /usr/local
+# Install system dependencies (only what we need)
+RUN apt-get update && \
+    apt-get install -y libpq-dev && \
+    rm -rf /var/lib/apt/lists/*
+
+# Copy dependency list first (layer caching)
+COPY requirements.txt .
+
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY app.py .
 
+# Environment variables
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
-
-USER appuser
 
 EXPOSE 5000
 
