--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -1,19 +1,19 @@
 services:
+  services:
   db:
     image: postgres:15
     environment:
       POSTGRES_DB: capstone_staging
       POSTGRES_USER: stage_user
       POSTGRES_PASSWORD: stage_pass
+    volumes:
+      - pgdata_staging:/var/lib/postgresql/data
+
 
   backend:
     image: chaithanya013/backend:dev
-    environment:
-      DB_HOST: db
-      DB_NAME: capstone_staging
-      DB_USER: stage_user
-      DB_PASSWORD: stage_pass
-      APP_ENV: staging
+    env_file:
+      - .env.staging
     ports:
       - "5001:5000"
     depends_on:
@@ -25,3 +25,5 @@ services:
       - "9091:80"
     depends_on:
       - backend
+volumes:
+  pgdata_staging:
