--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,23 +1,32 @@
-FROM python:3.10-slim
+# ---------- Stage 1: Builder ----------
+FROM python:3.10-slim AS builder
 
 WORKDIR /app
 
-# Install system dependencies (only what we need)
-RUN apt-get update && \
-    apt-get install -y libpq-dev && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y gcc libpq-dev && rm -rf /var/lib/apt/lists/*
 
-# Copy dependency list first (layer caching)
 COPY requirements.txt .
+RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
 
-RUN pip install --no-cache-dir -r requirements.txt
+# ---------- Stage 2: Runtime ----------
+FROM python:3.10-slim
 
-# Copy application code
+# Create non-root user
+RUN useradd -m appuser
+
+WORKDIR /app
+
+# Copy installed Python packages (INCLUDING pytest)
+COPY --from=builder /install /usr/local
+
+# Copy application and tests
 COPY app.py .
+COPY tests_app.py .
 
-# Environment variables
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
+
+USER appuser
 
 EXPOSE 5000
 
