Fix test filename mismatch for backend unit tests

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -21,7 +21,7 @@ COPY --from=builder /install /usr/local
 
 # Copy application and tests
 COPY app.py .
-COPY tests_app.py .
+COPY test_app.py .
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
