--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,30 +1,14 @@
-# ---------- Stage 1: Builder ----------
-FROM python:3.10-slim AS builder
-
-WORKDIR /app
-
-RUN apt-get update && apt-get install -y gcc libpq-dev && rm -rf /var/lib/apt/lists/*
-
-COPY requirements.txt .
-RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
-
-# ---------- Stage 2: Runtime ----------
 FROM python:3.10-slim
 
-# Create non-root user
-RUN useradd -m appuser
-
 WORKDIR /app
 
-# Copy installed Python packages (INCLUDING pytest)
-COPY --from=builder /install /usr/local
+RUN useradd -m appuser
 
-# Copy application and tests
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
 COPY app.py .
-COPY test_app.py .
-
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+COPY migrations ./migrations
 
 USER appuser
 
