--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -2,16 +2,23 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
+# Create non-root user
 RUN useradd -m appuser
 
+# Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY app.py .
-COPY migrations ./migrations
+# Copy source code
+COPY app.py /app/app.py
+COPY tests /app/tests
+COPY migrations /app/migrations
+
+# Make sure app.py is importable
+ENV PYTHONPATH=/app
 
 USER appuser
 
 EXPOSE 5000
 
-CMD ["python", "app.py"]
+CMD ["python", "/app/app.py"]
