--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -2,10 +2,15 @@ pipeline {
     agent any
 
     parameters {
-        choice(name: 'ENV', choices: ['dev', 'staging', 'prod'], description: 'Select environment')
+        choice(
+            name: 'ENV',
+            choices: ['dev', 'staging', 'prod'],
+            description: 'Select environment'
+        )
     }
 
     stages {
+
         stage('Checkout Code') {
             steps {
                 checkout scm
@@ -14,8 +19,12 @@ pipeline {
 
         stage('Build Images') {
             steps {
-                dir('backend') { bat 'docker build -t chaithanya013/backend:dev -f dockerfile .' }
-                dir('frontend') { bat 'docker build -t chaithanya013/frontend:dev -f dockerfile .' }
+                dir('backend') {
+                    bat 'docker build -t chaithanya013/backend:dev -f dockerfile .'
+                }
+                dir('frontend') {
+                    bat 'docker build -t chaithanya013/frontend:dev -f dockerfile .'
+                }
             }
         }
 
@@ -29,21 +38,40 @@ pipeline {
 
         stage('Trivy Scan') {
             steps {
-                bat 'docker save chaithanya013/backend:dev -o backend.tar'
                 script {
                     def ws = env.WORKSPACE.replace('\\', '/')
-                    bat "docker run --rm -v ${ws}:/scan aquasec/trivy:latest image --input /scan/backend.tar --severity HIGH,CRITICAL"
+
+                    bat """
+                        docker save chaithanya013/backend:dev -o backend.tar
+                        docker save chaithanya013/frontend:dev -o frontend.tar
+                    """
+
+                    bat """
+                        docker run --rm -v ${ws}:/scan aquasec/trivy:latest image \
+                        --input /scan/backend.tar --severity HIGH,CRITICAL --exit-code 0
+                    """
+
+                    bat """
+                        docker run --rm -v ${ws}:/scan aquasec/trivy:latest image \
+                        --input /scan/frontend.tar --severity HIGH,CRITICAL --exit-code 0
+                    """
                 }
             }
         }
 
         stage('Push to Docker Hub') {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                withCredentials([usernamePassword(
+                    credentialsId: 'dockerhub-creds',
+                    usernameVariable: 'DOCKER_USER',
+                    passwordVariable: 'DOCKER_PASS'
+                )]) {
                     bat """
-                        docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
+                        echo %DOCKER_PASS% | docker login -u %DOCKER_USER% --password-stdin
                         docker tag chaithanya013/backend:dev chaithanya013/backend:${params.ENV}
+                        docker tag chaithanya013/frontend:dev chaithanya013/frontend:${params.ENV}
                         docker push chaithanya013/backend:${params.ENV}
+                        docker push chaithanya013/frontend:${params.ENV}
                     """
                 }
             }
@@ -51,7 +79,6 @@ pipeline {
 
         stage('Deploy') {
             steps {
-                // Use double quotes to ensure Jenkins replaces ${params.ENV}
                 bat """
                     docker compose -f docker-compose.${params.ENV}.yml down --remove-orphans
                     docker compose -f docker-compose.${params.ENV}.yml up -d
@@ -61,7 +88,6 @@ pipeline {
 
         stage('Health Check') {
             steps {
-                // Pass the parameter correctly to PowerShell
                 bat "powershell -ExecutionPolicy Bypass -File scripts\\health_check.ps1 -Env ${params.ENV}"
             }
         }
@@ -69,7 +95,7 @@ pipeline {
 
     post {
         failure {
-            echo 'Pipeline failed. Triggering rollback....'
+            echo 'Pipeline failed. Triggering rollback...'
             bat "powershell -ExecutionPolicy Bypass -File scripts\\rollback.ps1 -Env ${params.ENV}"
         }
     }
