--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -2,10 +2,13 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
+# Install curl for healthcheck
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # Create non-root user
 RUN useradd -m appuser
 
-# Install dependencies
+# Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
@@ -13,7 +16,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY app.py .
 COPY tests ./tests
 
-# Environment best practices
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
@@ -21,8 +23,8 @@ USER appuser
 
 EXPOSE 5000
 
-# Docker-native healthcheck (VALID SYNTAX)
+# Docker-native, dependency-free healthcheck
 HEALTHCHECK --interval=10s --timeout=3s --retries=5 CMD \
-  python -c "import requests,sys; sys.exit(0 if requests.get('http://localhost:5000/health').status_code==200 else 1)"
+  curl -f http://localhost:5000/health || exit 1
 
 CMD ["python", "app.py"]
