--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -2,28 +2,24 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# Install curl for healthcheck
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-# Create non-root user
 RUN useradd -m appuser
 
-# Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy app and tests
 COPY app.py .
 COPY tests ./tests
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
+ENV PYTHONPATH=/app
 
 USER appuser
 
 EXPOSE 5000
 
-# Docker-native, dependency-free healthcheck
 HEALTHCHECK --interval=10s --timeout=3s --retries=5 CMD \
   curl -f http://localhost:5000/health || exit 1
 
