--- a/.env.staging
+++ b/.env.staging
@@ -3,11 +3,8 @@ APP_ENV=staging
 FLASK_ENV=staging
 FLASK_DEBUG=false
 
-BACKEND_PORT=5001
-
 DB_HOST=db
 DB_PORT=5432
 DB_NAME=capstone_staging
-DB_USER=stage_user
-DB_PASSWORD=stage_pass
-
+DB_USER=staging_user
+DB_PASSWORD=staging_pass
