--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
       - pgdata_prod:/var/lib/postgresql/data
 
   backend:
-    image: chaithanya013/backend:dev
+    image: chaithanya013/backend:prod
     env_file:
       - .env.prod
     ports:
@@ -19,7 +19,7 @@ services:
       - db
 
   frontend:
-    image: chaithanya013/frontend:dev
+    image: chaithanya013/frontend:prod
     ports:
       - "9092:80"
     depends_on:
