--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,29 +1,40 @@
+# ---------- Stage 1: Builder ----------
+FROM python:3.10-slim AS builder
+
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
+
+# ---------- Stage 2: Runtime ----------
 FROM python:3.10-slim
 
 WORKDIR /app
 
+# Install only runtime dependency
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
+# Create non-root user
 RUN useradd -m appuser
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy installed Python packages from builder
+COPY --from=builder /install /usr/local
 
+# Copy application code
 COPY app.py .
 COPY tests ./tests
 
-COPY migrations /app/migrations
-COPY run_migrations.sh /app/run_migrations.sh
-
-
+# Environment variables
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/app
 
+# Switch to non-root user
 USER appuser
 
 EXPOSE 5000
 
+# Health check
 HEALTHCHECK --interval=10s --timeout=3s --retries=5 CMD \
   curl -f http://localhost:5000/health || exit 1
 
